<resources>
    <string name="app_name">appPlantery</string>
    <string name="titleName">Plantery</string>
    <string name="email">Phone number, username, or email</string>
    <string name="password">Password</string>
    <string name="enter">Log in</string>
    <string name="or">OR</string>
    <string name="does_not_have_acoount">Don\'t have an account? <b><font color="#182C2B">Sign up</font></b></string>
    <string name="already_has_account">Have an account? <b><font color="#000000">Log in</font></b></string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="name">Full Name</string>
    <string name="password_confirm">Confirm password</string>
    <string name="continuee">Continuar</string>
    <string name="agree_terms_policy">By clicking Next, you agree to our <b>Terms, Data Policy and Cookies Policy.</b></string>
    <string name="welcome_to_allPlantery"><b>WELCOME TO PLANTRY,\n%1$s</b>\nFind methods to care for and monitor your plant. You can change your username at any time.</string>
    <string name="photo_register_subtitle">Add a profile picture to let your friends know its you.</string>
    <string name="photo_register_title">Upload profile picture</string>
    <string name="take_picture">Tirar foto</string>
    <string name="search_gallery">Escolher na Biblioteca</string>
    <string name="define_photo_profile">Set a profile picture</string>
    <string name="jump"><b>Jump</b></string>
    <string name="add_photo">Upload a photo</string>
    <string name="home">Home</string>
    <string name="posts">publicações</string>
    <string name="followers">seguidores</string>
    <string name="following">seguindo</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="username">username</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">The password must not be at least 8 characters long</string>
    <string name="password_not_equal">The password and password confirmation must be the same</string>
    <string name="save">Save</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="photo">Photo</string>
    <string name="gallery">Gallery</string>
    <string name="write_caption">Escreva uma descrição…</string>
    <string name="share">compartilhar</string>
    <string name="go">Avançar</string>
    <string name="search">Pesquisar</string>
    <string name="unfollow">Seguindo</string>
    <string name="follow">Seguir</string>
    <string name="logout">Deseja sair?</string>
    <string name="logout_action">Sair</string>
    <string name="cancel">Cancel</string>
    <string name="calendar">Calendar</string>
    <string name="myplants">My Plants</string>
    <string name="profile">Profile</string>
    <string name="profile_title">Profile</string>
    <string name="appnameplash">Plantery</string>
    <string name="account">Account</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="help"><![CDATA[Help & Supports]]></string>
    <string name="invalid_name">The name must have at least 3 characters</string>
    <string name="rank">Rank</string>
    <string name="friends">Friends</string>
    <string name="title1">Coriander</string>
    <string name="title2">Basil</string>
    <string name="title3">Dill</string>
    <string name="title4">Strawberry</string>
    <string name="title5">Lettuce</string>
    <string name="desc1">Awesome, enjoy your harvest!</string>
    <string name="desc2">Ew, I fell so dirty :( I should take a bath!</string>
    <string name="desc3">Are you ready? It\'s havest time!</string>
    <string name="desc4">Yeay! I feel clean and refreshed!</string>
    <string name="desc5">It\'s <b>Lettuce</b> harvest time!</string>
</resources>
