<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_light">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_img_logo"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@null"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:layout_gravity="center"
            android:text="@string/titleName"
            android:textColor="@color/green_primary"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/login_edit_email"
            style="@style/Theme.AppPlantery.FormEditText"
            android:autofillHints="@null"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_edit_password"
            style="@style/Theme.AppPlantery.FormEditText"
            android:autofillHints="@null"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_btn_enter"
            style="@style/Theme.AppPlantery.Button"
            android:text="@string/enter" />

        <FrameLayout
            style="@style/Theme.AppPlantery.FormContainder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/green_primary" />

            <TextView
                style="@style/Theme.AppPlantery.TextViewBase"
                android:layout_gravity="center"
                android:background="@color/beige_light"
                android:padding="8dp"
                android:text="@string/or" />

        </FrameLayout>
    </LinearLayout>
    </ScrollView>

    <View
        android:background="@color/green_primary"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="@id/login_txt_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:text="@string/does_not_have_acoount"
        android:id="@+id/login_txt_register"
        style="@style/Theme.AppPlantery.TextViewBase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:background="@color/beige_light"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:padding="24dp"
        android:textAlignment="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>