<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_light">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="70dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_img_icon"
                android:src="@drawable/ic_insta_profile_thin"
                app:civ_circle_background_color="@color/green_darker"
                app:civ_border_color="@color/green_darker"
                app:civ_border_width="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_width="120dp"
                android:layout_height="120dp"/>

            <TextView
                style="@style/Theme.AppPlantery.TextViewBaseBlueDarker"
                android:layout_marginBottom="18dp"
                android:text="@string/photo_register_title" />

            <TextView
                style="@style/Theme.AppPlantery.TextViewBaseBlueDarker"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="18dp"
                android:text="@string/photo_register_subtitle"
                android:textSize="18sp" />

            <com.example.appplantery.login.view.LoadingButton
                android:id="@+id/register_btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/add_photo" />

            <Button
                android:id="@+id/register_btn_jump"
                style="@style/Theme.AppPlantery.Link"
                android:text="@string/jump" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>