<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_light">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="70dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_img_icon"
                android:src="@drawable/ic_insta_profile_thin"
                app:civ_circle_background_color="@color/green_darker"
                app:civ_border_color="@color/green_darker"
                app:civ_border_width="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="80dp"
                android:layout_width="120dp"
                android:layout_height="120dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_edit_email_input"
                style="@style/Theme.AppPlantery.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_edit_email"
                    style="@style/Theme.AppPlantery.FormEditText"
                    android:autofillHints="@null"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.example.appplantery.login.view.LoadingButton
                android:id="@+id/register_btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/next" />

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/green_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/register_txt_login" />

    <TextView
        android:id="@+id/register_txt_login"
        style="@style/Theme.AppPlantery.TextViewBase"
        android:layout_width="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/beige_light"
        android:padding="24dp"
        android:text="@string/already_has_account"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>